--- a/camel-process/pom.xml
+++ b/camel-process/pom.xml
@@ -43,12 +43,16 @@
             <version>${combo.framework.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>io.hawt</groupId>-->
-<!--            <artifactId>hawtio-springboot</artifactId>-->
-<!--            <version>2.9.1</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>io.hawt</groupId>
+            <artifactId>hawtio-springboot</artifactId>
+            <version>2.9.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
