--- a/combo-camel/pom.xml
+++ b/combo-camel/pom.xml
@@ -54,11 +54,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.74</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-support</artifactId>
-            <version>3.1.0</version>
-            <scope>compile</scope>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
 
