--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ camel-view/target
 combo-camel/target
 demo-file/target
 demo-ftp/target
-demo-http4/target
+demo-netty/target
 demo-jetty/target
 demo-netty4-http/target
