--- a/demo-file/pom.xml
+++ b/demo-file/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.funny.study</groupId>
-        <artifactId>camel</artifactId>
+        <artifactId>camel-demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
